src/components/Cards/AddNewCard.css
.add-card {
    background-image: url("../../assets/background-image.jpg");
    background-position: center;
    width: 100vw;
    height: 100vh;
    padding: 5% 0px;
}

.add-card__card {
    width: 80%;
  margin: auto;
  background-color: #ffffff;
  text-align: left;
  padding: 32px;

}

.add-card__heading{
    font-size: 4rem;
    margin-bottom: 30px;
}

.add-card__div {
    margin-bottom: 2%;
}

.add-card__label {
    display: flex;
    flex-direction: column;
    gap: 15px;
    margin-bottom: 15px;
}

.add-card__btn {
    margin-top: 10%;
    font-size: 2rem;
    background-color: #000000;
    padding: 16px;
    border-radius: 5px;
    color: #FFFFFF;
}

.add-card__check-div {
    display: flex;
    gap: 8px;
    align-items: center;

}

.add-card__check-label {
    font-size: 2rem;
}

.add-card__checkbox {
    height: 30px;
    width: 30px;
}

.flex {
    display: flex;
    gap: 10%;
    align-items: center;
}

